istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gensite-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gensite-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - gensite-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "gensite-frontend"
            port:
              number: 3000
